--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -23,6 +23,9 @@
             color: white;
             padding: 1rem 2rem;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .header h1 {
@@ -493,8 +496,28 @@
 </head>
 <body>
     <header class="header">
-        <h1><i class="fas fa-palette"></i> CEART CMS</h1>
-        <p>Sistema de Gerenciamento de Conteúdo - Feira Cultural de Arte e Artesanato</p>
+        <div>
+            <h1><i class="fas fa-palette"></i> CEART CMS</h1>
+            <p>Sistema de Gerenciamento de Conteúdo - Feira Cultural de Arte e Artesanato</p>
+        </div>
+        <div style="display: flex; align-items: center; gap: 1.5rem;">
+            <div style="text-align: right;">
+                <div style="font-size: 0.9rem; opacity: 0.9;">
+                    <i class="fas fa-user-circle"></i> <span id="userName">Usuário</span>
+                </div>
+                <div style="font-size: 0.75rem; opacity: 0.7; margin-top: 2px;">
+                    <span id="userRole">Admin</span>
+                </div>
+            </div>
+            <button 
+                onclick="logout()" 
+                style="background: rgba(255,255,255,0.2); color: white; border: 2px solid rgba(255,255,255,0.3); padding: 0.6rem 1.2rem; border-radius: 8px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; gap: 0.5rem;"
+                onmouseover="this.style.background='rgba(255,255,255,0.3)'"
+                onmouseout="this.style.background='rgba(255,255,255,0.2)'"
+            >
+                <i class="fas fa-sign-out-alt"></i> Sair
+            </button>
+        </div>
     </header>
 
     <div class="container">
